get Total working hours api
