# Controller/attendanceContro.js
@@ -43,7 +43,7 @@ exports.checkOut = (req, res) => {
 
 exports.getAll = (req, res) => {
     //#swagger.tags = ['Attendance controller']
-    const { date, month } = req.query;
+    const { date,  month } = req.query;
     attendanceService
         .getAll(req.query)
         .then((response) => {
@@ -61,6 +61,21 @@ exports.getAllById = (req, res) => {
     const { empId, date, month } = req.query;
     attendanceService
         .getAllById(req.query)
+        .then((response) => {
+            return res.status(200).json(response);
+        })
+        .catch((error) => {
+            return res.status(500).json({
+                message: error.message || "Internal server error",
+            });
+        });
+};
+
+exports.getAllAttendance = (req, res) => {
+    //#swagger.tags = ['Attendance controller']
+    const {startDate, endDate, type } = req.query;
+    attendanceService
+        .getAllAttendance(req.query)
         .then((response) => {
             return res.status(200).json(response);
         })
