# Routes/attendanceRoute.js
@@ -7,5 +7,7 @@ routes.post('/checkIn', attendanceRoute.checkIn);
 routes.post('/checkOut', attendanceRoute.checkOut)
 routes.get('/getAll', attendanceRoute.getAll)
 routes.get("/getAllById", attendanceRoute.getAllById)
+routes.get("/getAllAttendance", attendanceRoute.getAllAttendance)
+
 
 module.exports = routes;
